docker/kub-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: local
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
