docker/kub-front/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: local
spec:
  parentRefs:
  - name: gateway
    namespace: infra
  hostnames:
  - "muscuscope.local"
  - "www.muscuscope.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-service
      port: 80
